Get nodes to exchange simple blocks